--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -16,3 +16,23 @@ header a {
   font-weight: bold;
   text-decoration: none;
 }
+main{
+  padding: 1rem;
+}
+.products{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.product{
+  border: 1px solid #404040;
+  margin: 1rem;
+}
+.product img{
+  max-width: 400px;
+  width: 100%;
+}
+.product-info{
+  padding: 1rem;
+}
+
